# ProFed

./: CHANGELOG.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml
src/ProFed/: partitionings.py
