[tool.poetry]
name = "ProFed"
version = "0.4.1"
description = "A benchmark for proximity-based non-IID Federated Learning"
authors = [""]
readme = "README.md"
license = "MIT"
homepage = ""
repository = ""
include = [
    "LICENSE",
]
classifiers = [
    "Topic :: System :: Benchmark",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "ProFed", from = "src" },
]

[tool.poetry.urls]
"Changelog" = ""

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.2.2"
torchvision = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
